--- a/styles/board.css
+++ b/styles/board.css
@@ -314,6 +314,7 @@
   display: flex;
   flex-direction: column;
   height: 168px;
+  margin-top: 80px;
 }
 
 .description {
@@ -845,7 +846,7 @@
 }
 
 .addBoard {
-  width: 92%;
+  width: 69%;
 }
 
 .subtaskItemBoard {
@@ -1048,7 +1049,6 @@
   content: "";
   width: 24px;
   height: 24px;
-  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='18' height='18' viewBox='0 0 18 18' fill='none'%3E%3Cpath d='M17 8V14C17 15.6569 15.6569 17 14 17H4C2.34315 17 1 15.6569 1 14V4C1 2.34315 2.34315 1 4 1H12' stroke='white' stroke-width='2' stroke-linecap='round'/%3E%3Cpath d='M5 9L9 13L17 1.5' stroke='white' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E");
   background-size: contain;
   background-repeat: no-repeat;
   position: absolute;
